--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URI=mongodb://localhost:27017/bookadzone
 ADMIN_EMAIL='bookadzone@gmail.com'
 JWT_SECRET='bookadzone-14-01-2023'
 JWT_EXPIRE_TIME='1h'
+EMAIL = 4022karthickm@gmail.com
+APP_PASSWORD=ibbn zynp jrqn rnzz
