--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/bookadzone
-ADMIN_EMAIL='bookadzone@gmail.com'
-JWT_SECRET='bookadzone-14-01-2023'
-JWT_EXPIRE_TIME='1h'
+ADMIN_EMAIL=admin@gmail.com
+JWT_SECRET=bookadzone-14-01-2023
+JWT_EXPIRE_TIME=1h
